[package]
name = "rusttery"
version = "1.0.0"
edition = "2021"

[dependencies]
tiny_http = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
eframe = "0.29"
egui = "0.29"
rusqlite = { version = "0.32", features = ["bundled"] }
dirs = "5.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Devices_Power",
] }
